infrastructure/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: oauth2-proxy
spec:
    selector:
        pod: oauth2-proxy
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: 4180
